src/third_party/nasm/travis/test/selfref.stderr
./travis/test/selfref.asm:23: error: comma, colon, decorator or end of line expected after operand
./travis/test/selfref.asm:20: ... from macro `Foo2' defined here
